--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity 
+            android:name="com.udem.videotracker.ResultActivity"
+            android:label="Recherche"/>
         <activity 
             android:name="com.udem.videotracker.PlaylistActivity"
             android:label="Playlists"/>
