--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:label="À propos de VideoTracker" />
         <activity
             android:name="com.udem.videotracker.AideActivity"
-            android:label="À propos de VideoTracker" />
+            android:label="Aide de VideoTracker" />
         <activity
             android:name="com.udem.videotracker.VideoActivity"
             android:label="@string/title_activity_video" >
