ajout d'un playlistAdapter avec un playlist data. Implementation de parcelable pour video data pour pouvoir passer une video entre deux activités. Ajout de commentaires pour certaines activités. Ajout de TODOs.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name="com.udem.videotracker.PlaylistActivity"
             android:label="Playlists" />
         <activity
+            android:name="com.udem.videotracker.PlaylistVideoActivity"
+            android:label="Playlists" />
+        <activity
             android:name="com.udem.videotracker.ResultatVideosActivity"
             android:label="Vidéos" />
         <activity
