--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.RechercheActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -26,30 +28,52 @@
         </activity>
 
          <activity 
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.ResultActivity"
             android:label="Recherche"/>
         
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.PlaylistActivity"
             android:label="Playlists" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.PlaylistVideoActivity"
             android:label="Playlists" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.ResultatVideosActivity"
             android:label="Vidéos" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.PreferencesActivity"
             android:label="Préférences" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.ProposActivity"
             android:label="À propos de VideoTracker" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.AideActivity"
             android:label="Aide de VideoTracker" />
         <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:name="com.udem.videotracker.VideoActivity"
             android:label="@string/title_activity_video" >
+        </activity>
+        <activity
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
+            android:name="com.udem.videotracker.InternetCheckActivity"
+            android:label="Vérification de la connexion Internet" >
         </activity>
         
     </application>
