--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.RechercheActivity"
+            android:name="com.udem.videotracker.recherche.RechercheActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,36 +30,36 @@
          <activity 
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.ResultActivity"
+            android:name="com.udem.videotracker.recherche.ResultActivity"
             android:label="Recherche"/>
          
          <activity 
             android:configChanges="orientation"
     		android:screenOrientation="landscape"
-            android:name="com.udem.videotracker.YoutubePlayerActivity"
+            android:name="com.udem.videotracker.api.YoutubePlayerActivity"
             android:label="Lecteur"/>
          
          <activity 
     		android:screenOrientation="landscape"
     		android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:configChanges="orientation|keyboardHidden|keyboard"
-            android:name="com.udem.videotracker.DailymotionPlayerActivity"
+            android:name="com.udem.videotracker.api.DailymotionPlayerActivity"
             android:label="Lecteur Dailymotion"/>
         
         <activity
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.PlaylistActivity"
+            android:name="com.udem.videotracker.playlist.PlaylistActivity"
             android:label="Playlists" />
         <activity
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.PlaylistVideoActivity"
+            android:name="com.udem.videotracker.playlist.PlaylistVideoActivity"
             android:label="Playlists" />
         <activity
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.ResultatVideosActivity"
+            android:name="com.udem.videotracker.recherche.ResultatVideosActivity"
             android:label="Vidéos" />
         <activity
             android:configChanges="orientation"
@@ -79,7 +79,7 @@
         <activity
             android:configChanges="orientation"
     		android:screenOrientation="portrait"
-            android:name="com.udem.videotracker.VideoActivity"
+            android:name="com.udem.videotracker.recherche.VideoActivity"
             android:label="@string/title_activity_video" >
         </activity>
         <activity
